--- a/tableau-day-2017.Rmd
+++ b/tableau-day-2017.Rmd
@@ -6,7 +6,7 @@ date: "July 26, 2017"
 output:
   xaringan::moon_reader:
     lib_dir: libs
-    css: ["default", "duke_color_pallettes_slides.css"]
+    css: ["default", "duke_color_pallettes_slides.css", "td2017.css"]
     nature:
       highlightStyle: github
       highlightLines: true
@@ -124,6 +124,43 @@ Image credits:
 
 ---
 
+### Consultations
+
+
+.pull-left[ 
+
+
+![](images/consulting.jpg)
+
+
+] 
+
+.pull-right[ 
+
+- ### Walk-in Schedule
+
+    - M-F, 1-3pm
+    - [/data/about/schedule](https://library.duke.edu/data/about/schedule)
+
+- ### By Appointment
+
+    - [askdata@duke.edu](mailto:askdata@duke.edu)
+
+- ### 1st Floor Bostock Library 
+
+     - [The /Edge](http://library.duke.edu/edge/spaces)
+
+]
+
+???
+
+image credit
+
+- http://maxpixel.freegreatpicture.com/Consulting-Management-Idea-Lamp-Gear-1315735
+
+
+---
+
 ## Hands-on Workshops
 
 .pull-left[ 
@@ -163,12 +200,6 @@ image credits
 
 
 ---
-class: softblue, top, center
-background-image:  url(images/angela-guide-tableau.png)
-
-## http://guides.library.duke.edu/tableau/
-
----
 class: green
 ## Selected Tableau and Visualization Workshops
 
@@ -190,44 +221,20 @@ class: green
 - Adobe Illustrator for Diagrams and Visualizations
 - Designing Academic Figures and Posters
 
-
 ---
+class: softblue, top, center
+background-image:  url(images/angela-guide-tableau.png)
 
-### Consultations
+.td[
 
-
-.pull-left[ 
-
-
-![](images/consulting.jpg)
-
-
-] 
-
-.pull-right[ 
-
-- ### Walk-in Schedule
-
-    - M-F, 1-3pm
-    - [/data/about/schedule](https://library.duke.edu/data/about/schedule)
-
-- ### By Appointment
-
-    - [askdata@duke.edu](mailto:askdata@duke.edu)
-
-- ### 1st Floor Bostock Library 
-
-     - [The /Edge](http://library.duke.edu/edge/spaces)
+##http://guides.library.duke.edu/tableau/
+&nbsp;
 
 ]
 
-???
-
-image credit
-
-- http://maxpixel.freegreatpicture.com/Consulting-Management-Idea-Lamp-Gear-1315735
-
-
+<!-- div class = "td">
+<h2>http://guides.library.duke.edu/tableau/</h2>
+</div -->
 
 ---
 ## Thank You For Attending
