--- a/tableau-day-2017.Rmd
+++ b/tableau-day-2017.Rmd
@@ -18,6 +18,8 @@ background-image:  url(http://library.duke.edu/data/sites/default/files/datagis/
 ## Data & Visualization Services
 ### http://library.duke.edu/data
 
+Tableau Day Slides `->` http://is.gd/td2017
+
 ???
 <!-- class: center, middle -->
 
